[package]
name = "dlsat"
version = "1.0.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-web = "3.3.2"
clap = "2.33.3"
env_logger = "0.8.2"
futures = { version = "0.3.8", features = ["thread-pool"] }
log = "0.4.11"
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
url = "2.2.0"
youtube_dl = "0.6.0"
