[package]
name = "dlsat"
version = "0.1.0"
authors = ["sksat <sksat@sksat.net>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-files = "0.5.0"
actix-web = "3.3.2"
dict_derive = "0.3.0"
env_logger = "0.8.2"
futures = { version = "0.3.17", features = ["thread-pool"] }
inline-python = "0.6.0"
log = "0.4.11"
pyo3 = "0.11.0"
serde = "1.0.118"
serde_derive = "1.0.118"
toml = "0.5.8"
url = "2.2.0"
youtube_dl = "0.6.0"
